kustomize/backend/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: cors
spec:
  headers:
    accessControlAllowMethods:
      - GET
      - POST
      - PUT
      - OPTIONS
    accessControlAllowOriginList:
      - "*"
    accessControlAllowCredentials: true
    accessControlMaxAge: 100
    addVaryHeader: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: izvoli
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/ssl-ciphers: "ALL:!aNULL:!EXPORT56:RC4+RSA:+HIGH:+MEDIUM:+LOW:+SSLv2:+EXP"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - izvoli.eu
      secretName: izvoli-tls
  rules:
    - host: izvoli.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: izvoli
                port:
                  number: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: izvoli-nginx
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.middlewares: izvoli-eu-sl-trailing-slash@kubernetescrd,default-rewrite-target@kubernetescrd,default-cors@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - files.izvoli.eu
      secretName: izvoli-nginx-tls
  rules:
    - host: files.izvoli.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: izvoli-nginx
                port:
                  number: 80
